2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_break): Clarify logic.
	Better error handling.
	(grub_script_return): Likewise.
	* grub-core/script/lexer.c (grub_script_lexer_yywrap): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (__GNU_LIBRARY__): Avoid
	rimplicit redifinition.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation): Detail (lack of) collation in
	GRUB.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_cmdline_get): Don't gettext prompt.
	* grub-core/normal/main.c (grub_normal_read_line_real): Gettext
	prompt here.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (zfs_fetch_nvlist): Mark unknown member here
	as GRUB_ERR_BUG. Don't malloc if no device is available.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_terminfo_output_unregister):
	Mark calling with invalid term as GRUB_ERR_BUG.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/tftp.c (tftp_receive): Silently discard too short
	packets rather than raising an error.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/xnu.c (grub_xnu_writetree_toheap_real): Avoid set
	in if.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/efi/appleloader.c (grub_cmd_appleloader): Move
	diagnostic to dprintf.
	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/corecmd.c (grub_core_cmd_ls): Handle error in parsing
	device name.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c (locate_attr): Avoid set in if.
	(grub_ntfs_iterate_dir): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	Efiemu stylistic fixes and gettext.
